--- a/.env.example
+++ b/.env.example
@@ -3,14 +3,14 @@ APP_ENV=local
 APP_KEY=base64:eqO7L+TLBhD9y2zs7S81Zh8gZZdtDRNwxFQr3uY9AyM=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://console-openstack.vodafone.local:8080
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=terraform
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=redhat
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -28,6 +28,3 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
